# sgec

./: CMakeLists.txt  files.txt
examples/: CMakeLists.txt  font.c  sprite.c  system.c
impl/src/audio/: buffer.cpp  file.cpp  loader.cpp  player.cpp
impl/src/audio/sound/: base.cpp  from_repeat.cpp  to_play_status.cpp
impl/src/font/: added.cpp  object.cpp  system.cpp
impl/src/image/color/: translate_rgba.cpp
impl/src/image2d/: system.cpp
impl/src/input/cursor/: make_id.cpp  translate_button_code.cpp  translate_button_event.cpp  translate_button_state.cpp  translate_move_event.cpp  translate_position.cpp  translate_position_opt.cpp  translate_scroll_code.cpp  translate_scroll_event.cpp
impl/src/input/focus/: make_id.cpp  translate_key_event.cpp  translate_key_repeat_event.cpp  translate_text_event.cpp
impl/src/input/key/: translate_code.cpp  translate_state.cpp
impl/src/input/keyboard/: translate_key_event.cpp
impl/src/input/mouse/: translate_axis_code.cpp  translate_axis_event.cpp  translate_button_code.cpp  translate_button_event.cpp  translate_button_state.cpp
impl/src/renderer/: translate_render_event.cpp
impl/src/renderer/context/: ffp.cpp
impl/src/renderer/device/: ffp.cpp
impl/src/renderer/texture/: planar.cpp
impl/src/systems/: instance.cpp
impl/src/texture/: part.cpp
impl/src/window/: system.cpp  translate_event.cpp
include/sgec/: result.h
include/sgec/audio/: buffer.h  buffer_fwd.h  file.h  file_fwd.h  loader.h  loader_fwd.h  player.h  player_fwd.h
include/sgec/audio/sound/: base.h  base_fwd.h  play_status.h  repeat.h
include/sgec/detail/: footer.h  header.h
include/sgec/font/: added.h  added_fwd.h  object.h  object_fwd.h  system.h  system_fwd.h  ttf_size.h  unit.h
include/sgec/font/draw/: simple.h
include/sgec/image/color/: make_rgba.h  rgba.h  rgba_channel.h  rgba_fwd.h
include/sgec/image2d/: system_fwd.h
include/sgec/input/cursor/: button_callback.h  button_code.h  button_event.h  button_event_fwd.h  button_state.h  id.h  move_callback.h  move_event.h  move_event_fwd.h  object.h  object_fwd.h  position.h  position_fwd.h  position_opt.h  position_opt_fwd.h  position_unit.h  scroll_callback.h  scroll_code.h  scroll_event.h  scroll_event_fwd.h  scroll_value.h
include/sgec/input/focus/: char_event.h  char_event_fwd.h  id.h  key_callback.h  key_event.h  key_event_fwd.h  key_repeat_callback.h  key_repeat_event.h  key_repeat_event_fwd.h  object.h  object_fwd.h  text_event.h  text_event_fwd.h
include/sgec/input/key/: code.h  state.h
include/sgec/input/keyboard/: device.h  device_fwd.h  key_callback.h  key_code.h  key_event.h  key_event_fwd.h  key_id.h  key_repeat_callback.h  key_state.h
include/sgec/input/mouse/: axis_callback.h  axis_code.h  axis_event.h  axis_event_fwd.h  (+8 more)
include/sgec/renderer/: render_event.h  render_event_fwd.h
include/sgec/signal/: connection.h  connection_fwd.h
include/sgec/sprite/: draw.h  object.h  object_fwd.h  scalar.h  unit.h
include/sgec/systems/: cursor_option.h  instance.h  instance_fwd.h
include/sgec/texture/: part.h  part_fwd.h  part_raw.h
include/sgec/window/: event.h  event_fwd.h  event_result.h  event_type.h  free_event.h  size_unit.h  system.h  system_fwd.h  system_poll_result.h  unit.h
src/: CMakeLists.txt
src/audio/: buffer.cpp  file.cpp  loader.cpp  player.cpp
src/audio/sound/: base.cpp
src/font/: added.cpp  object.cpp  system.cpp
src/font/draw/: simple.cpp
src/image/color/: make_rgba.cpp
src/impl/audio/: buffer.cpp  file.cpp  loader.cpp  player.cpp
src/impl/audio/sound/: base.cpp  to_play_status.cpp
src/impl/font/: system.cpp
src/impl/image/color/: translate_rgba.cpp
src/impl/image2d/: system.cpp
src/impl/input/cursor/: object.cpp  translate_axis_code.cpp  translate_button_code.cpp  translate_button_event.cpp  translate_button_state.cpp  translate_move_event.cpp  translate_scroll_code.cpp  translate_scroll_event.cpp
src/impl/input/focus/: object.cpp  translate_char_event.cpp  translate_text_event.cpp
src/impl/input/key/: translate_code.cpp
src/impl/input/keyboard/: device.cpp  translate_key_code.cpp  translate_key_event.cpp
src/impl/input/mouse/: device.cpp  translate_axis_event.cpp  translate_button_code.cpp  translate_button_state.cpp
src/impl/renderer/context/: ffp.cpp
src/impl/renderer/device/: ffp.cpp
src/impl/renderer/texture/: planar.cpp
src/impl/signal/: connection.cpp
src/impl/systems/: instance.cpp
src/impl/texture/: part.cpp
src/impl/window/: system.cpp  translate_event.cpp
src/include/sgec/impl/audio/: buffer.hpp  file.hpp  loader.hpp
src/include/sgec/impl/font/: system.hpp
src/include/sgec/impl/image/color/: translate_rgba.hpp
src/include/sgec/impl/image2d/: system.hpp
src/include/sgec/impl/input/cursor/: object.hpp  translate_button_code.hpp  translate_button_event.hpp  translate_move_event.hpp
src/include/sgec/impl/input/focus/: object.hpp  translate_char_event.hpp  translate_key_event.hpp
src/include/sgec/impl/input/key/: translate_state.hpp
src/include/sgec/impl/input/keyboard/: device.hpp  translate_key_code.hpp
src/include/sgec/impl/input/mouse/: device.hpp  translate_axis_code.hpp  translate_axis_event.hpp  translate_button_code.hpp  translate_button_state.hpp
src/include/sgec/impl/renderer/context/: ffp.hpp
src/include/sgec/impl/renderer/device/: ffp.hpp
src/include/sgec/impl/renderer/texture/: planar.hpp
src/include/sgec/impl/signal/: connection.hpp
src/include/sgec/impl/systems/: instance.hpp
src/include/sgec/impl/texture/: part.hpp
src/include/sgec/impl/window/: system.hpp  translate_event.hpp
src/input/cursor/: object.cpp
src/input/focus/: object.cpp
src/input/keyboard/: device.cpp
src/input/mouse/: device.cpp
src/renderer/context/: ffp.cpp
src/renderer/device/: ffp.cpp
src/renderer/texture/: create_planar_from_path.cpp  planar.cpp
src/signal/: connection.cpp
src/sprite/: draw.cpp
src/systems/: instance.cpp
src/texture/: part.cpp  part_raw.cpp
src/window/: free_event.cpp  system.cpp
util/: check_includes.sh  prettify_includes.sh  update_cmake.sh
(+49 files in other folders)
